@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -81,7 +82,7 @@ public class ZombieTests extends AdminBaseDevTest {
     }
 
     private void makeDasUndead() throws MalformedURLException, IOException {
-        URL zombieUrl = new URL("http://localhost:8080/Zombie");
+        URL zombieUrl = URI.create("http://localhost:8080/Zombie").toURL();
         URLConnection conn = zombieUrl.openConnection();
         conn.getInputStream().close();
     }
