@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -64,7 +65,7 @@ public class WebTest {
         String url = "http://" + host + ":" + port + contextRoot + "/myurl"
                 + "?testcase=" + testCase;
         System.out.println("opening connection to " + url);
-        HttpURLConnection conn = (HttpURLConnection) (new URL(url))
+        HttpURLConnection conn = (HttpURLConnection) URI.create(url).toURL()
                 .openConnection();
 
         int code = conn.getResponseCode();
