@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2017, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -132,7 +133,7 @@ public class WebSSLClient {
                                               SSLSocketFactory ssf)
             throws Exception {
 
-        URL url = new URL(urlAddress);
+        URL url = URI.create(urlAddress).toURL();
         HttpsURLConnection.setDefaultSSLSocketFactory(ssf);
         HttpsURLConnection connection = (HttpsURLConnection)
             url.openConnection();
