@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -111,7 +112,7 @@ public abstract class ClientBase extends AdminBaseDevTest {
         boolean result=false;
 
         try {
-            URL url = new URL(connection);
+            URL url = URI.create(connection).toURL();
 
             HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.connect();
