@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2013, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -62,8 +63,8 @@ public class WebTest {
 
     private void invokeJsp() throws Exception {
 
-        URL url = new URL("http://" + host + ":" + port + "/"
-                          + contextRoot1 + "/jsp/test.jsp");
+        URL url = URI.create("http://" + host + ":" + port + "/"
+                          + contextRoot1 + "/jsp/test.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.connect();
@@ -76,8 +77,8 @@ public class WebTest {
             return;
         }
 
-        url = new URL("http://" + host + ":" + port + "/"
-                          + contextRoot2 + "/jsp/test.jsp");
+        url = URI.create("http://" + host + ":" + port + "/"
+                          + contextRoot2 + "/jsp/test.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
         conn = (HttpURLConnection) url.openConnection();
         conn.connect();
