@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -36,7 +37,7 @@ public class WebTest{
         try{
             stat.addDescription("Basic Host/Context mapping");
             System.out.println("Running test");
-            url = new URL("http://" + host  + ":" + port + "/");
+            url = URI.create("http://" + host  + ":" + port + "/").toURL();
             String originalLoc = url.toString();
             System.out.println("\n Invoking url: " + url.toString());
             conn = url.openConnection();
