@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 1997, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -60,8 +61,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port + "/"
-            + "%E3%81%A8%E7%B2%AEJot%E7%B2%AEEnterpriseApplication2%E7%B2%A4%E3%82%8D-war/test.jsp");
+        URL url = URI.create("http://" + host  + ":" + port + "/"
+            + "%E3%81%A8%E7%B2%AEJot%E7%B2%AEEnterpriseApplication2%E7%B2%A4%E3%82%8D-war/test.jsp").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
