@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2010, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -50,7 +51,7 @@ public class WebTest {
             String url = "http://" + host + ":" + port + "/" + contextRoot + "/index.jsp";
             System.out.println(url);
             HttpURLConnection conn = (HttpURLConnection)
-                    (new URL(url)).openConnection();
+                    URI.create(url).toURL().openConnection();
             conn.connect();
             InputStream is = null;
             BufferedReader input = null;
