@@ -1,4 +1,5 @@
 /*
+ * Copyright (c) 2026 Contributors to the Eclipse Foundation.
  * Copyright (c) 2011, 2018 Oracle and/or its affiliates. All rights reserved.
  *
  * This program and the accompanying materials are made available under the
@@ -20,6 +21,7 @@ import org.junit.Assert;
 import org.junit.Test;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.io.*;
 
@@ -31,7 +33,7 @@ import java.io.*;
 public class BasicTest {
     @Test
     public void testException() throws Exception {
-        URL url = new URL("http://localhost:8080/sse-basic-test/exception");
+        URL url = URI.create("http://localhost:8080/sse-basic-test/exception").toURL();
         HttpURLConnection uc = (HttpURLConnection) url.openConnection();
         if (uc.getResponseCode() != 200) {
             throw new RuntimeException("Invoked main page, got HTTP response code="+uc.getResponseCode());
